css/xcsoar.css
/******************************************************************************
 MASTER STYLES FOR SCREEN MEDIA
 ******************************************************************************/

/* GLOBALS */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, cite, code, del, dfn, em, img, ins, strike, strong, sub, sup, dt, dd, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {  margin: 0; padding: 0; border: 0; }
ul, ol, li, dl { border: 0; }

a:active { outline: 0; }
body { line-height: 1; font-size: small; }
table { border-collapse: collapse; border-spacing: 0; }
.hidden { display: none; }

a.green { color: #359a41; }
a.green:hover { color: #1b8d29; }
a.green:active { color: #359a41; }

/* LINKS */
a:link { text-decoration: none; }
a:hover { text-decoration: underline; }

hr { border-style: dotted; border-width: 1px 0 0 0; margin: 10px 0; }

strong {
    font-weight: bold;
}

/* HTML */
html { font-family: "Ubuntu", sans-serif; font-weight: 300; }

/* TRAC OVERWRITE */
h1, h2, h3, h4 { letter-spacing: 0; font-family: "Ubuntu", sans-serif; }
#secondary #footer { line-height: 14px; }

/******************************************************************************
 PRIMARY SECTION
 ******************************************************************************/
#primary {
  padding: 20px 0 0 0;
}

.shadowed main {
  padding: 0 0 20px 0;
}

/* HEADER */
#title h1 {
  border-top: 1px dotted #9f9c99;
  border-bottom: 1px dotted #9f9c99;
  padding: 20px 0;
  margin: 20px 0 10px;
  font-family: Ubuntu, sans-serif;
  font-size: 38px;
  font-weight: normal;
}

#title h1.tagline {
  font-family: Paprika, serif;
  text-align: center; font-size: 27.3px;
}

/* NAV */
ul#nav { float: right; margin-top: 20px; list-style: none; }
ul#nav li { float: left; padding-left: 30px; font-size: 16px; }
ul#nav li a { text-decoration: none; text-transform: uppercase; color: #878380; }
ul#nav li.discover a:hover, ul#nav li.contact a:hover { border-bottom: 2px solid #1A4977; color: #1A4977; }
ul#nav li.download a:hover, ul#nav li.hardware a:hover { border-bottom: 2px solid #1B8D29; color: #1B8D29; }
ul#nav li.develop a:hover { border-bottom: 2px solid #B55722; color: #B55722; }

@media (max-width: 767px) {
  #logo {
    text-align: center;
  }

  ul#nav {
    float: none;
    clear: both;
  }

  ul#nav li {
    padding: 10px 0 0;
    width: 33%;
    text-align: center;
  }
}

@media (max-width: 370px) {
  ul#nav li {
    float: none;
    text-align: left;
  }
}

/* SUMMARY */
#summary h2 { margin: 20px 0; }
#summary h3 { margin-bottom: 5px; padding-right: 20px; font-family: "Ubuntu" ,sans-serif; line-height: 24px; }
#summary h3 a { text-decoration: none; }
#summary h3 a:hover { text-decoration: underline; }
#summary h4 { margin: 30px 0 10px 0; font-size: 12px; font-weight: normal; letter-spacing: 2px; text-transform: uppercase; }
#summary h4.first-child { margin-top: 0; }
#summary p { margin-bottom: 20px; padding-right: 20px; font-family: "Ubuntu" ,sans-serif; font-size: 15px; line-height: 28px; }
#summary pre { margin-bottom: 20px; }
#summary ul, #summary ol { margin-bottom: 20px; padding-left: 20px; line-height: 24px; }
#summary ul li, #summary ol li { margin-bottom: 3px; font-family: "Ubuntu" ,sans-serif; font-size: 15px; }
#summary a.more { font-family: "Ubuntu", sans-serif; font-size: 12px; font-weight: bold; }

/* ASIDE */
#aside { line-height: 21px; }
#aside h2 { margin-bottom: 10px; font-size: 12px; font-weight: normal; letter-spacing: 2px; text-transform: uppercase; }
#aside p { margin-bottom: 10px; font-size: 14px; font-family: "Ubuntu" ,sans-serif; color: #878380; }

/* WEBCHAT */
#webchat { height: 500px; border: 1px dotted #9f9c99; }

/* IFRAME */
#iframe{ margin: 120px 0 20px; }

/******************************************************************************
 SECONDARY SECTION
 ******************************************************************************/
#secondary {
  padding: 20px 0;
  background: #f4f4ed;
  width: 98%;
  margin: auto;
  margin-top: 5px;
  max-width: 1230px;
}

/* SCREENSHOTS */
#screenshots h2 { font-size: 24px; line-height: 30px; font-weight: normal; }
#screenshots h3 { margin-bottom: 20px; font-size: 12px; font-weight: normal; letter-spacing: 2px; text-transform: uppercase; color: #878380; }
#screenshots ul { list-style: none; }
#screenshots ul li { float: left; width: 296px; padding: 5px 10px; margin: 0 5px 20px 0; background: url(../img/thumbnail-backdrop.png) 0 0 no-repeat; }
#screenshots ul li.last-child { margin-right: 0; }
#screenshots ul li a { float: left; padding: 9px; border: 1px solid #fff; margin-bottom: 10px; background: #fff; }
#screenshots ul li a:hover { border-color: #dcdad4; }
#screenshots ul li img { float: left; width: 276px; height: 180px; }
#screenshots ul li p { padding-left: 10px; font-size: 11px; line-height: 13px; color: #6a635f; }
#screenshots ul li p strong { font-size: 12px; color: #453c37; }

#screenshots p {
  padding: 10px;
  font-size: 11px;
  line-height: 13px;
  color: #6a635f;
}

#screenshots .col-md-4 {
  max-width: 400px;
}

.screenshot {
  padding: 6px;

  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;

  border: 1px solid lightgrey;
  background: white;
}

.screenshot:hover {
  border-color: #6a635f;
}

/******************************************************************************
 TERTIARY SECTION
 ******************************************************************************/

/* FOOTER */

footer { margin-top: 20px; color: #fff; }
footer a { text-decoration: none; color: #fff; }
footer a:hover { border-bottom: 1px dotted; color: #d2e0ec; }
footer h2 { margin: 13px 0 16px 0; font-size: 14px; font-weight: normal; letter-spacing: 2px; text-transform: uppercase; }

/* COPYRIGHT */

.copyright { font-size: 11px; text-align: center; margin: 20px 0; }

/* GLOBAL */

.shadowed {
  background: #fff;
  margin: 1% 1% 0 2%;
  width: 97%;
  max-width: 1230px;
  padding: 0 20px;

  -webkit-box-shadow:0px 0 20px #000000;
     -moz-box-shadow:0px 0 20px #000000;
          box-shadow:0px 0 20px #000000;
}
.nowrap {
  white-space: nowrap;
}

.container {
  padding: 0 20px;
}

ul {
  list-style-position: inside;
  padding-left: 0;
}

/* BUTTONS */

.btn {
  text-decoration: none;
}

/* QUICKLINK LISTS */

ul.quicklinks {
  list-style: none;
  margin: 10px;
  line-height: 25px;
}

ul.quicklinks li a {
  text-decoration: none;
}

ul.quicklinks li a:hover {
  text-decoration: underline;
}

ul.quicklinks li.divider {
  height: 15px;
}

li {
  padding-left: 25px;
}

li.list-item-data {
  list-style-image: url('/img/icon-globe.png');
}

li.list-item-windows {
  list-style-image: url('/img/icon-windows.png');
}

li.list-item-wince {
  list-style-image: url('/img/icon-windows-mobile.png');
}

li.list-item-android {
  list-style-image: url('/img/icon-android.png');
}

li.list-item-debian,
li.list-item-unix {
  list-style-image: url('/img/icon-debian.png');
}

li.list-item-cubie {
  list-style-image: url('/img/icon-cubie-20x20.png');
}

li.list-item-pi {
  list-style-image: url('/img/icon-pi-20x20.png');
}

li.list-item-mac {
  list-style-image: url('/img/icon-apple.png');
}

li.list-item-kobo {
  list-style-image: url('/img/icon-kobo-20x20.png');
}
li.list-item-xcsoar {
  list-style-image: url('/img/icon-xcsoar.png');
}

li {
  list-style: none;
}

/* DOWNLOADS */

ul#downloads a {
  color: #359A41;
}

ul#downloads a:hover {
  color: #1B8D29;
}

ul#downloads a:active {
  color: #359A41;
}

/* SOCIAL LINKS */

#social-links div {
  float: left;
  width: 25%;
  text-align: center;
}

/* NEWS */

h2 small {
  color: #999999;
  font-size: 65%;
  font-weight: normal;
}

/* CONTACT LIST */

ul.contact {
  list-style: none;
  margin: 10px;
  line-height: 25px;
}

ul.contact li {
  padding-left: 26px;
  margin: 5px 0;
}

